--- a/src/components/Home/Spots/Spot/Spot.css
+++ b/src/components/Home/Spots/Spot/Spot.css
@@ -15,3 +15,9 @@
     width: 80%;
     text-align: center;
 }
+@media only screen and (max-width:689px) {
+    .spot-container{
+        width: 100%;
+        margin-left: -1px;
+    }
+    }
