--- a/src/components/Home/Spots/Spots.css
+++ b/src/components/Home/Spots/Spots.css
@@ -11,3 +11,8 @@
     padding: 20px;
     text-align: center;
 }
+@media only screen and (max-width:689px) {
+    .spots-container{
+        width: 100%;
+    }
+    }
